# security-mas

./: README.md  main.py  pyproject.toml  result.json
api_server/: api_server.py
mas_core/: graph.py  nodes.py  state.py
mas_core/schemas/: llm_analyzer.py  security.py
results/: report.json
test_project/: app.py  command_injection.py  hardcoded_secret.py  insecure_pickle.py  path_traversal.py  requirements.txt  xss.py
tools/: sast_tool.py  sca_tool.py
