[project]
name = "security-mas"
version = "0.1.0"
description = "Multi-agent security analysis system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==0.12.0",
    "pillow==6.2.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.128.0",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-prebuilt>=1.0.7",
    "langgraph-sdk>=0.3.3",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "semgrep>=1.150.0",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "mas_core*",
    "api_server*",
    "tools*",
]
exclude = [
    "test_project*",
    "results*",
]
